--- a/project.properties
+++ b/project.properties
@@ -9,4 +9,5 @@
 
 proguard.config=proguard.cfg
 # Project target.
-target=Google Inc.:Google APIs:14
+target=Google Inc.:Google APIs:17
+android.library.reference.1=../adt-bundle-linux-x86_64/sdk/extras/google/google_play_services/libproject/google-play-services_lib
